--- a/src/main/resources/assets/meloncitrusmod/lang/en_us.json
+++ b/src/main/resources/assets/meloncitrusmod/lang/en_us.json
@@ -1,8 +1,8 @@
 {
-  "item.meloncitrusmod.milk_bottle": "Bottle of Milk",
+  "item.fruitfulendeavors.milk_bottle": "Bottle of Milk",
 
-  "block.meloncitrusmod.carved_melon": "Melon with a Face",
-  "block.meloncitrusmod.jack_o_melon": "Jack o' Melon",
+  "block.fruitfulendeavors.carved_melon": "Melon with a Face",
+  "block.fruitfulendeavors.jack_o_melon": "Jack o' Melon",
 
   "creativetab.ingredient_tab": "Ingredient Tab",
   "creativetab.deco_blocks_tab": "Decorative Blocks"
