Added tile and pattern blocks + datagen (not run yet)

--- a/src/main/resources/assets/meloncitrusmod/lang/en_us.json
+++ b/src/main/resources/assets/meloncitrusmod/lang/en_us.json
@@ -4,6 +4,42 @@
   "block.fruitfulendeavors.carved_melon": "Melon with a Face",
   "block.fruitfulendeavors.jack_o_melon": "Jack o' Melon",
 
+  "block.fruitfulendeavors.black_tile": "Black Tile Block",
+  "block.fruitfulendeavors.blue_tile": "Blue Tile Block",
+  "block.fruitfulendeavors.brown_tile": "Brown Tile Block",
+  "block.fruitfulendeavors.cyan_tile": "Cyan Tile Block",
+  "block.fruitfulendeavors.gray_tile": "Gray Tile Block",
+  "block.fruitfulendeavors.green_tile": "Green Tile Block",
+  "block.fruitfulendeavors.light_blue_tile": "Light Blue Tile Block",
+  "block.fruitfulendeavors.light_gray_tile": "Light Gray Tile Block",
+  "block.fruitfulendeavors.lime_tile": "Lime Tile Block",
+  "block.fruitfulendeavors.magenta_tile": "Magenta Tile Block",
+  "block.fruitfulendeavors.orange_tile": "Orange Tile Block",
+  "block.fruitfulendeavors.pink_tile": "Pink Tile Block",
+  "block.fruitfulendeavors.purple_tile": "Purple Tile Block",
+  "block.fruitfulendeavors.red_tile": "Red Tile Block",
+  "block.fruitfulendeavors.white_tile": "White Tile Block",
+  "block.fruitfulendeavors.yellow_tile": "Yellow Tile Block",
+
+  "block.fruitfulendeavors.black_pattern": "Black Pattern Block",
+  "block.fruitfulendeavors.blue_pattern": "Blue Pattern Block",
+  "block.fruitfulendeavors.brown_pattern": "Brown Pattern Block",
+  "block.fruitfulendeavors.cyan_pattern": "Cyan Pattern Block",
+  "block.fruitfulendeavors.gray_pattern": "Gray Pattern Block",
+  "block.fruitfulendeavors.green_pattern": "Green Pattern Block",
+  "block.fruitfulendeavors.light_blue_pattern": "Light Blue Pattern Block",
+  "block.fruitfulendeavors.light_gray_pattern": "Light Gray Pattern Block",
+  "block.fruitfulendeavors.lime_pattern": "Lime Pattern Block",
+  "block.fruitfulendeavors.magenta_pattern": "Magenta Pattern Block",
+  "block.fruitfulendeavors.orange_pattern": "Orange Pattern Block",
+  "block.fruitfulendeavors.pink_pattern": "Pink Pattern Block",
+  "block.fruitfulendeavors.purple_pattern": "Purple Pattern Block",
+  "block.fruitfulendeavors.red_pattern": "Red Pattern Block",
+  "block.fruitfulendeavors.white_pattern": "White Pattern Block",
+  "block.fruitfulendeavors.yellow_pattern": "Yellow Pattern Block",
+
+  "block.fruitfulendeavors.moms_block":  "Mom's Block <3",
+
   "creativetab.ingredient_tab": "Ingredient Tab",
   "creativetab.deco_blocks_tab": "Decorative Blocks"
 }
